fixed the calendar not showing the DatePicker

--- a/src/Component/react_dates_overrides.css
+++ b/src/Component/react_dates_overrides.css
@@ -5,3 +5,8 @@
 .DayPicker_weekHeader {
     top: 40px;
 }
+
+.DateRangePicker_picker {
+    top: auto !important;
+    left: auto !important;
+}
